# python-fastapi-poetry

./: poetry.mdx
hello-fastapi/: pyproject.toml
hello-fastapi/src/todos/: main.py
hello-fastapi/src/todos/config/: db.py
hello-fastapi/src/todos/models/: todos.py
