[project]
name = "todos"
version = "0.1.0"
description = ""
authors = [
    {name = "karthik nadar",email = "karthiknadar1204@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.123.3,<0.124.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "uvicorn (>=0.38.0,<0.39.0)"
]

[tool.poetry.scripts]
dev= "todos.main:start"

[tool.poetry]
packages = [{include = "todos", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
